--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -15,11 +15,82 @@
 		margin-left: 18px;
 	}	
 
+	.b-cart {
+		&__item {
+			&-imgblock {
+				margin-right: 30px;
+			}
+			&-quantity {
+				padding-right: 30px;
+			}
+			&-del {
+				margin-left: 30px;
+			}
+		}
+		&__price {
+			padding-left: 30px;
+			padding-right: 30px;
+		}
+	}
 	
 }
 
 // ≥992px
 @include media-breakpoint-down(md) {
+	.b-faq {
+		&__answer {
+			padding: 0 15px;
+		}
+		.b-contacts__title {
+			&:after {
+				display: none;
+			}
+			&.hide {
+				font-weight: bold;
+			}
+		}
+	}
+	.b-contacts {
+		&__title {
+			font-size: 16px;
+		}
+		&__info .button.buy {
+			margin-top: 4px;
+    		padding: 4px 20px;
+    		margin-left: 0;
+		}
+		&__info {
+			&-head {
+				margin-top: 25px;
+				margin-bottom: 7px;
+			}
+		}
+		&__container {
+			&-title{
+				margin-bottom: 10px;
+			}
+		}
+	}
+	.b-calc {
+		&__tabs {
+			&-link {
+				margin-right: 10px;
+			}
+		}
+	}
+	.b-topbanner {
+		&__video {top: 19px;}
+		&__appoint {
+				right: 150px;
+				max-width: 100%;
+			&-text {
+				display: none;
+			}
+			&-link {
+				margin-top: 148px;
+			}
+		}
+	}
 	.button {
 		font-size: 15px;
 		padding: 13px 40px;
@@ -27,6 +98,9 @@
 				padding: 13px 40px;
 
 		}
+	}
+	.wideslider {
+		width: 100%;
 	}
 	p {
 		margin-top: 1rem;
@@ -415,6 +489,7 @@
 			}
 		}
 	}
+
 	.b-midbanner {
 		padding:63px 15px 0px 15px;
 		line-height: 1.2;
@@ -524,6 +599,7 @@
 					border-left: 5px solid $blue;
 				}
 				&.close:after {
+					background: none;
 					transform: rotate(90deg);
 
 				}
@@ -553,10 +629,272 @@
 			}
 		}
 	}
+	.b-cart {
+		&__item {
+			&-imgblock {
+				margin-right: 10px;
+			}
+			&-quantity {
+				padding-right: 10px;
+			}
+			&-del {
+				margin-left: 10px;
+			}
+		}
+		&__price {
+			padding-left: 10px;
+			padding-right: 10px;
+		}
+	}
+	.b-forbuilders {
+		&__wrapper {
+			margin-top: 40px;
+			margin-bottom: 40px;
+		}
+	}
+
 }
 
 // ≥768px
 @include media-breakpoint-down(sm) {
+	.display-sm-block {
+		display: block;
+	}
+	.b-forbuilders {
+		&__wrapper {
+			padding: 30px 15px;
+			margin-top: 10px;
+			margin-bottom: 30px;
+		}
+		h2.gradient.text {
+			font-size: 20px;
+		}
+		&__link-download {
+
+		    margin-top: 15px;
+
+		}
+	}
+	.b-faq {
+		&__answer {
+			padding: 0;
+		}
+	}
+	.b-contacts {
+		&__container {
+			padding-left: 0;
+			margin: 20px 0;
+		}
+		&__title {
+			padding: 15px 30px 15px 15px;
+			&:after {
+				right: 15px;
+			}
+		}
+		&__info {
+			.button.buy {
+				float: right;
+				margin-top: 4px;
+				padding: 2px 10px;
+			}
+		}
+	}
+	.b-cart {
+		&__back {
+			&.with_arrow{
+				margin: 25px 0;
+				position: relative;
+				top: auto;
+				left: auto;
+			}
+		}
+		&__item {
+			&-left,&-right {
+				width: 100%;
+			} 
+			&-link {
+				margin-top: 20px;
+				display: block;
+			}
+			&-right {
+				margin-top: 20px;
+			}
+			&-imgblock {
+				margin-right: 20px;
+				width: 215px;
+				height: 130px;
+			}
+			&-quantity {
+				padding-right: 20px;
+				span {
+					display: none;
+				}
+			}
+			&-del {
+				margin-left: 0px;
+				position: absolute;
+				top: 15px;
+				right: 30px;
+			}
+		}
+		&__agree {
+			padding: 0;
+			color: #666;
+			br {
+				display: none;
+			}
+		    text-align: center;
+		}
+		&__total {
+			text-align: center;
+			display: block;
+			margin-top: 20px;
+		}
+		&__price {
+			padding-left: 0px;
+			padding-right: 0px;
+			position: absolute;
+			display: none;
+
+		}
+	}	
+	.fancy_call {
+			margin-top: 0;
+		h2 {
+			font-size: 22px !important;
+		}
+	}
+	.fancybox-close-small {
+    	top: 30px;
+	}
+	.fancybox-slide::before {
+		display: none;
+	}	
+	.fancybox-slide--html {
+    	padding: 0;
+	}
+	.b-calc {
+		&__price {
+			text-align: center;
+			&-title {
+				display: block;
+			}
+			&-tooltip {
+				margin-right: 0;
+			}
+			&-link {
+				display: block;
+				margin-bottom: 25px;
+			}
+			&-button.button.buy{
+				display: block;
+				width: 100%;
+				float: none;
+				max-height: 100%;
+			}
+		}
+		&__tabs {
+			margin-top: 40px;
+			margin-bottom: 30px;
+			&-link {
+				margin-right: 0px;
+				font-size: 14px;
+				display: none;
+				&.active {
+					display: inline-block;
+				}
+			}
+		&-number {
+			margin-right: 6px;
+			width: 20px;
+			height: 20px;
+			line-height: 20px;
+			font-size: 12px;
+		}
+		}
+		&__sizes {
+			&-inputblock:after {
+				right: 30px !important;
+			}
+		}		
+		&-item {
+			&-img {
+				height: 100px;
+			}
+			&-imgelement {
+				width: 100%;
+				height: 100%;
+			}
+		}
+		&__form{
+			padding: 38px 15px 38px 15px;
+			&-button {
+				display: block;
+				float: none;
+				width: 100%;
+			}
+			&-title.gradient.text {
+				font-size: 18px;
+			}
+		}
+		&__back {
+			margin-bottom: 25px;
+		}
+	}
+	.display-sm-none {
+			display: none !important;
+		}
+	.b-arch {
+		&__tabs {
+			&-element {
+				font-size: 14px;
+				padding-top: 15px;
+				padding-bottom: 15px;
+				&.left {
+					padding-left: 20px;
+					padding-right: 20px;
+				}
+				&.right {
+					padding-left: 20px;
+					padding-right: 20px;
+				}
+			}
+		}
+			&__container {
+				padding: 40px 15px;
+			}
+			&__table {
+				margin-top: 30px;
+				margin-bottom: 50px;
+				&-title {
+					display: none;
+				}
+				&-link {
+					display: block;
+					font-size: 12px;
+					margin-bottom: 5px;
+					&:last-child {
+						margin-bottom: 0;
+					}
+				}
+				td {
+					display: block;
+					padding: 15px;
+					border: none;
+					text-align: center;
+					img{
+						width: 290px;
+					}
+				}
+				tr {
+					border-bottom: 1px solid #fff;
+				}
+			}
+			&__button {
+				display: block;
+				width: 100%;
+			}
+	}
 	.b-about {
 		&__text {
 			font-size: 13px;
