--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -5,6 +5,16 @@
 
 // ≥1200px
 @include media-breakpoint-down(lg) {
+	.b-order {
+		&__imgblock {
+			margin-right: 10px;
+		}
+		&__product {
+			&-quantity {
+				padding: 5px 15px 0px 15px;
+			}
+		}
+	}
 	.b-topmenu__item {
 		margin-right: 15px;
 	}
@@ -37,6 +47,91 @@
 
 // ≥992px
 @include media-breakpoint-down(md) {
+	.checkbox__title::before, .radio__title::before {
+		width: 25px;
+		height: 25px;
+		border-width: 2px
+	}
+	.b-order {
+		&__title {
+		margin-left: -15px;
+		margin-right: -15px;
+			
+		}
+		&__total {
+		margin-left: -15px;
+		margin-right: -15px;
+		padding: 15px 30px;
+		background: rgba(243,231,233,1);
+		background: -moz-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+		background: -webkit-gradient(left top, right top, color-stop(0%, rgba(243,231,233,1)), color-stop(100%, rgba(227,238,255,1)));
+		background: -webkit-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+		background: -o-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+		background: -ms-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+		background: linear-gradient(to right, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e7e9', endColorstr='#e3eeff', GradientType=1 );
+		&-price {
+			font-size: 25px;
+		}
+		&-delivery {
+			font-size: 25px;
+			font-weight: 300;
+		}
+
+		}
+		&__button {
+			background: none;
+		}
+		&__form {
+			padding-bottom: 0 !important; 
+			.b-select__wrap {
+			    margin-bottom: 103px;
+			}
+		}
+		&__radio {	
+		&-title {
+			padding-left: 40px;
+			top: calc(50% - 11px);
+		}
+		&-wrapper {
+			margin-bottom: 20px;
+			&:before {
+				// display: none !important;
+			}
+		}
+			&-text {
+				padding-left: 40px;
+				padding-right: 0;
+			}
+		}
+		&__product,&__details {
+			padding: 15px;
+			background: none;
+			&-totalprice {
+				display: inline-block;
+				padding: 0;
+				float: right;
+				font-size: 25px;
+			}
+			&-quantity {
+				font-size: 17px;
+				padding-top: 5px;
+				display: inline-block;
+			}
+			.cart_item_price {
+				text-align: right;
+				color: #666;
+			}
+		}
+		&__details {
+			position: relative;
+			&-right {
+				position: absolute;
+				right: 15px;
+				top: 10px;
+			}
+		}
+	}
 	.b-faq {
 		&__answer {
 			padding: 0 15px;
@@ -502,6 +597,11 @@
 		&__tabs {
 			font-size: 12px;
 		}
+		&__desc {
+			&-date {
+				padding-top: 15px;
+			}
+		}
 	}	
 	#wideslider3.wideslider {
 		width: 100%;
@@ -652,11 +752,85 @@
 			margin-bottom: 40px;
 		}
 	}
+	.b-manualshef {
+		&__container {
+			padding: 25px 15px 25px 15px;
+			margin-bottom: 0;
+		}
+		&__title {
+			font-size: 15px;
+			font-weight: normal;
+		}
+		&__button.button.buy {
+			display: block;
+			padding: 13px 15px;
+			width: 100%;
+		}
+		&__banner {
+			margin-bottom: 120px;
+			min-height: 215px;
+			&-text {
+				br {
+					display: none;
+				}
+				top: 216px;
+			}
 
+		}
+	}
 }
 
 // ≥768px
 @include media-breakpoint-down(sm) {
+	.b-mounts {
+		&__container {
+			margin-bottom: 25px;
+			padding-bottom: 15px;
+			border-bottom: 1px solid #ccc;
+			&-link {
+				font-size: 18px;
+				font-weight: 300;
+			}
+		}
+	}
+	.b-topbanner {
+		&.short {
+			min-height: 80px;
+		}
+	}
+	.b-topbanner.banner3 {
+		    min-height: 80px;
+			margin-bottom: 256px;	
+		.b-topbanner__title {
+			font-size: 26px;
+			font-weight: 300;
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			padding: 0;
+			padding-bottom: 25px;
+
+		}
+		.b-topbanner__text.mount_txt,.b-topbanner__text{
+			padding: 0;
+			font-size: 13px;
+		}
+		.b-topbanner__wrapper {
+			max-width: 100%;
+			position: absolute;
+			padding-left: 0;
+			padding-right: 0;
+		}
+		.b-topbanner__container {
+			max-width: 576px;
+			margin-top: 110px;
+			padding: 0;
+			padding-left: 15px;
+			padding-right: 15px;
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+	}
 	.display-sm-block {
 		display: block;
 	}
@@ -849,6 +1023,7 @@
 			&-element {
 				font-size: 14px;
 				padding-top: 15px;
+				text-transform: none;
 				padding-bottom: 15px;
 				&.left {
 					padding-left: 20px;
@@ -922,6 +1097,7 @@
 	}	
 	.mobilefluid {
 		width: 100%;
+		max-width: 100%;
 		.col-12 {
 			padding: 0;
 		}
@@ -1257,6 +1433,7 @@
 	.b-news {
 		&__item {
 		    margin-top: 0px;
+		    margin-bottom: 45px;
 		}
 		&__tabs {
 			text-align: center;
@@ -1304,6 +1481,7 @@
 		&__banner {
 			min-height: 387px;
 			margin-top: 0;
+			margin-bottom: 45px;
 			.b-news__desc-title {
 				font-size: 18px;
 			}
@@ -1357,12 +1535,18 @@
 			margin-bottom: 15px;
 			}
 	} 
+	.blue_link.with_arrow {
+		&.bottom {
+			margin-left: 55px;
+		}
+	}
 	.footer{
 		display: none;
 		&__mobile {
 		padding: 20px 0;
 		padding-bottom: 0;
 		display: block;
+		margin-top: 25px;
 			&-social {
 				text-align: center;
 				.social__link {
