--- a/app/partials/pages/catalog_spisok_tovarov.html
+++ b/app/partials/pages/catalog_spisok_tovarov.html
@@ -45,7 +45,7 @@
 				<div class="col-md-10">
 					<form action="" class="b-filter gradient_bg">
 						<div class="row">
-							<div class="col-md-3 b-select">
+							<div class="col-lg-3 b-select">
 								<div class="b-select__wrap">
 									<label class="b-select__title" for="">Элемент:</label>
 									<select class="b-select__container w100" name="" id="">
@@ -55,8 +55,8 @@
 									</select>
 								</div>
 							</div>
-							<div class="col-md-3 b-select"></div>
-							<div class="col-md-3 b-select">
+							<div class="col-lg-3 b-select"></div>
+							<div class="col-lg-3 b-select">
 								<div class="b-select__wrap">
 									<label class="b-select__title" for="">Коллекции:</label>
 									<select class="b-select__container w100" name="" id="">
@@ -66,7 +66,7 @@
 									</select>
 								</div>
 							</div>
-							<div class="col-md-3 b-select">
+							<div class="col-lg-3 b-select">
 								<div class="b-select__wrap">
 									<label class="b-select__title" for="">Цвет кровли:</label>
 									<select class="b-select__container w100" name="" id="">
@@ -85,14 +85,14 @@
 						</div>
 					</form>
 					<div class="row">	
-						<div class="col-4 d-flex">	
+						<div class="col-lg-4 col-md-6 d-flex">	
 						<div class="b-filter__sort">
 							<span class="b-filter__sort-title">Сортировать по</span>
 							<a class="b-filter__sort-link active"  href="#">цене</a>
 							<a class="b-filter__sort-link" href="#">названию</a>
 						</div>
 						</div>
-						<div class="col-8 d-flex justify-content-end">
+						<div class="col-lg-8 col-md-6  d-flex justify-content-end">
 						<div class="b-filter__number">
 							<span class="b-filter__number-title">Выводить по</span>
 							<a class="b-filter__number-link active" href="#">10</a>
