--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -197,7 +197,7 @@ html {
 	background-color: $blue;
 	font-family: $default-font;
 	letter-spacing: 1px;
-	padding: 8px 61px;
+	padding: 6px 61px;
 	color: #fff;
 	font-weight: 500;
 	text-align: center;
@@ -234,6 +234,16 @@ html {
 				background: linear-gradient(to right, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
 				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d70e62', endColorstr='#0758ba', GradientType=1 );
 		}
+		&:active {
+			color: #ac1e74;
+			border-left: 1px solid $blue;
+			border-right: 1px solid  $accent;
+			&:before,&:after {
+				background: rgba(215,14,98,1);
+				background: linear-gradient(to left, rgba(215,14,98,1) 0%, rgba(7,88,186,1) 100%);
+			}
+
+		}
 		&:hover {
 				border-left-color: #024aba;
 				border-right-color: #024aba;
@@ -246,7 +256,7 @@ html {
 			top:0px;
 		}
 		&.buy2 {
-			padding: 10px 13px;
+			padding: 6px 13px;
 			font-weight: bold;
 
 		}
@@ -254,7 +264,7 @@ html {
 			float: none;
 		}
 		&.order {
-			padding: 10px 50px;	
+			padding: 6px 50px;	
 		}
 	}
 }
@@ -266,7 +276,6 @@ html {
 .counter {
 	font-family: "GTWalsheimPro";
 	font-weight: 400;
-	padding-bottom: 29px;
 
 	span {
 		padding-right: 6px;
@@ -277,8 +286,8 @@ html {
 
 }
 .ruble {
-				font-family: "roboto-example";
-				font-weight: 200;
+				font-family: "PTSans";
+				font-weight: 400;
 }
 *,*:active{
 	outline:none;
@@ -1023,8 +1032,17 @@ b, strong {
 		line-height: 1.2;
 		margin-bottom: 13px;
 		padding: 15px;
+		position: relative;
 		&:after {
-
+			content: '';
+			width: 70px;
+			height: 25px;
+			background: url(../img/arrow_right_white_big.png) no-repeat;
+			display: block;
+			position: absolute;
+			right: 0;
+			margin-right: 158px;
+			bottom: 48px;
 		} 
 	}
 	&__text {
@@ -1170,6 +1188,14 @@ b, strong {
 	}
 
 	&__navigation {
+		&-img {
+			position: absolute;
+			width: 73px;
+			height: 100%;
+			left: -73px;
+			top: 0;
+			display: none;
+		}
 		&-head {
 			padding-bottom: 25px;
 			padding-left: 20px; 
@@ -1199,6 +1225,7 @@ b, strong {
 				padding-left: 20px; 
 				display: block;
 				cursor: pointer;
+				position: relative;
 				&.active,&:hover {
 					background: rgba(243,231,233,1);
 					background: -moz-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
@@ -1208,6 +1235,11 @@ b, strong {
 					background: -ms-linear-gradient(left, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
 					background: linear-gradient(to right, rgba(243,231,233,1) 0%, rgba(227,238,255,1) 100%);
 					filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f3e7e9', endColorstr='#e3eeff', GradientType=1 );                   
+				}
+				&:hover,&.active {
+					img {
+						display: block;
+					}
 				}
 		}
 
@@ -1323,6 +1355,9 @@ b, strong {
 	}
 }
 .b-professionals {
+	&__title {
+		min-height: 108px;
+	}
 	&__desc {
 		font-size: 15px;
 		padding-bottom: 20px;
@@ -1367,7 +1402,7 @@ b, strong {
 		&-container {
 			display: inline-block;
 		}
-		padding-bottom: 40px;
+		padding-bottom: 50px;
 		&-link {
 			font-weight: bold;
 			margin-left: 40px;
@@ -1427,8 +1462,9 @@ b, strong {
 	}
 	&__desc {
 		&-date {
-			color:#333333;
+			color:#928e90;
 			padding-bottom: $gutter/2;
+			padding-top: 40px;
 			font-size: 12px;
 
 		}
@@ -1466,7 +1502,7 @@ b, strong {
 						font-weight: 500;
 					}
 					&-title {
-						font-size: 27px;
+						font-size: 24px;
 						font-family: 'GTWalsheimPro';
 						font-weight: normal;
 						color: #fff !important;
@@ -1483,7 +1519,7 @@ b, strong {
 				}
 
 				.b-news__desc-title {
-					font-size: 27px;
+					font-size: 24px;
 					color: $blue !important;
 					&.gradient.text {
 						padding: 0px;
@@ -1497,7 +1533,7 @@ b, strong {
 
 .navContainer {
 		position: absolute;
-		top: -57px;
+		top: -29px;
 		left: 76px;
 		button {
 			border:none;
@@ -1517,13 +1553,16 @@ b, strong {
 			}
 		}
 	}
+
 .b-shop {
 	&__img {
 		text-align: center;
 		position: relative;
-		padding: 15px;
+		background: #fff;
 		&-item {
+			padding: 15px;
 			object-fit: contain;
+			width: 100%;
 			}
 		}
 
@@ -1538,7 +1577,10 @@ b, strong {
 			}
 		}
 	&__item {
+		position: relative;
+			margin-top: 30px;
 		border: 3px solid $grey;
+		background: #f9f9f9;
 		}
 
 	&__link {
@@ -1546,9 +1588,23 @@ b, strong {
 		font-weight: 500;
 		font-size: 15px;
 		display: block;
-		margin-bottom: $gutter;
 		line-height: 1.3;
+		max-height: 80px;
+		overflow: hidden;
+		margin-bottom: 115px;
 		}
+	&__slider {
+		width: calc(100% + 15px) !important;
+		&.owl-carousel .owl-stage {
+			display: flex;
+			flex-wrap: wrap;
+		}
+		&.owl-carousel .owl-item {
+		    float: none;
+		    display: flex;
+		    height: auto !important;
+		}
+	}
 	&__price {
 		color: #666666;
 		font-weight: normal;
@@ -1561,6 +1617,7 @@ b, strong {
 			color: #333333;
 			white-space: nowrap;
 				&-minus {
+					cursor: pointer;
 					float: left;
 					width:31px;
 					font-weight: 300;
@@ -1571,6 +1628,7 @@ b, strong {
 					border-right:  1px solid #e6e6e6;
 				}
 				&-plus {
+					cursor: pointer;
 					float: left;
 					width:31px;
 					height: 31px;
@@ -1597,6 +1655,16 @@ b, strong {
 		&__desc {
 			background-color: $grey;
 			padding: 15px;
+			&-bottom {
+				position: absolute;
+				width: calc(100% - 34px);
+				bottom: 15px;
+				@include media-breakpoint-down(lg) {
+					width: auto;
+					position: relative;
+					bottom: auto;
+				}
+			}
 		}		
 		&__popup {
 			background-color: rgba(255, 255, 255, 0.9);
@@ -1613,13 +1681,14 @@ b, strong {
 				color: $blue;
 				font-weight: bold;
 				font-size: 11px;
+				padding: 6px;
 			}
 			&-options {
 				padding: 10px;
 				padding-bottom: 0;
 			}
 			&-row {
-					padding-bottom: 15px;
+					padding-bottom: 5px;
 			}
 			&-cell {
 					text-align: left;
@@ -1782,7 +1851,45 @@ b, strong {
 	}
  }
 }
+.select2-dropdown {
+	font-size: 15px;
+	background-color: #f9f9f9;
+	border-radius: 0 !important;
+	border:none;
+	.select2-search--dropdown {
+		display: none !important;
+	}
+}
+.select2-container--default .select2-results__option--highlighted[aria-selected] {
+    background-color: #c1d3f7;
+    color: #000;
+}
+.select2-results {
+    margin-top: -20px;
+}
+.select2-results__option {
+    padding:6px 10px;
+}
+.select2-container--default.select2-container--open.select2-container--below .select2-selection--single {
+	border-radius: none !important;
+
+}
+.select2-container--default .select2-results > .select2-results__options{
+    background: #f9f9f9;
+}
+
+.select2-container--open {
+	background-color: #f9f9f9;
+}
+.select2-container {
+	padding: 10px;
+}
+.select2-container--default .select2-selection--single .select2-selection__arrow{
+	top: 13px;
+	right: 3px;
+}
 .b-select {
+
 	&__title {
 			font-weight: bold;
 			text-transform: uppercase;
@@ -2892,6 +2999,7 @@ b, strong {
 		}
 	}
 	&__logo {
+			font-size: 14px;
 			font-weight: 500;
 			margin-bottom: $gutter/2;
 			&-img {
@@ -3461,6 +3569,19 @@ top: 87px;
 		}
 	}
 }
+
+.video {
+		position: relative;
+		&-play {
+			position: absolute;
+			left: calc(50% - 40px);
+			top: calc(50% - 40px);
+			cursor: pointer;
+			width: 80px;
+			height: 80px;
+			background: url(../img/play.png) no-repeat;
+		}
+	}
 /***********************mobile menu**************/
 @import "media"; // Always at the end
 	
